# capsaicin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  adapters.md  architecture.md  cli.md  configuration.md  data-model.md  overview.md  plan.md  state-machine.md  workspace-lifecycle.md
docs/tickets/: README.md  backlog.md  roadmap.md
src/capsaicin/: activity_log.py  cli.py  config.py  criteria.py  db.py  diagnostics.py  diff.py  errors.py  init.py  loop.py  materialize.py  orchestrator.py  pipeline_outcome.py  planning_loop.py  planning_review.py  planning_run.py  planning_status.py  preflight.py  project_context.py  prompts.py  queries.py  reconciliation.py  resolver.py  resume.py  review_baseline.py  (+13 more)
tests/: adapters.py  conftest.py  test_adapter_types.py  test_app_commands.py  test_app_queries.py  test_backend_evidence.py  test_claude_code_adapter.py  test_cli.py  test_codex_adapter.py  test_config.py  test_criteria.py  test_dashboard.py  test_db.py  test_diagnostics.py  test_diff.py  test_doctor.py  test_evidence_audit.py  test_evidence_in_prompts.py  test_init.py  test_loop.py  test_loop_selection.py  test_materialize.py  test_orchestrator.py  test_permission_denied.py  test_planning.py  test_planning_commands.py  test_planning_loop.py  test_planning_validation.py  test_preflight.py  test_prompts.py  test_reconciliation.py  test_resolver.py  test_resume.py  test_review_baseline.py  test_run_cost_logging.py  test_schema.py  test_state_machine.py  test_status_diagnostics.py  test_ticket_add.py  test_ticket_approve.py  (+19 more)
(+195 files in other folders)
