[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capsaicin"
version = "0.1.0"
description = "Local-first autonomous ticket loop for AI-assisted software development"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "python-ulid>=3.0",
    "typing_extensions>=4.0;python_version<'3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
capsaicin = "capsaicin.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
